--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,7 @@
     "register-service-worker": "^1.7.2",
     "vite-plugin-pwa": "^0.17.0",
     "vue": "^3.3.8",
-    "vue-router": "^4.2.5",
-    "ws": "^8.14.2"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
